--- a/Spoilers.org
+++ b/Spoilers.org
@@ -103,14 +103,18 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 - Everyone is a caveperson. It's as appropriate to say "cavelady" as it is to say "lady".
 - The feeling is light and easy like a mockumentary. The narrator is just "me", so I don't have to remember what "voice" I'm using.
 - No humorous-fake-terms for things that /they/ have and /we/ have a name for. For example, no need to call a tree a "massive-weed" or to call a cat a "gerbil-dog". Or maybe yes do that. It would be pretty sweet if Crecspeak words got a special tag so we can identify, use special fonts, check for glossary leaks...
-- Have a "global warning" analog
--
-
-* Ephemeral Notes
-
-- "boys and baby-makers!..."
+- Definitely have a "global warning" analog
 - Someone gets caught using the "bachelor-tree" and is vaguely shamed for it the rest of their life.
 - We need to get around to: Gog said "boulder-stump" and is tried for obscenity and has Grav as his lawyer.
 - Somewhere here and there we need to throw in a "very special" episode where someone get's gorily torn apart or beaten to death or thrown off a mountain for something that totally deserves it: man-on-man buttfucking, conning granny, child-diddling, disrespecting the Chief... Really shock it to 'em.
 - Is there a character that's always trying to make a flying machine and fails over and over in hilarious ways. Is there?!
 - There needs to be a skill or activity that makes a caveperson really look like a badass. Like taming a hyena and riding on its back (which works out usually.) And a regulatory body that ensures that only the properly skilled are allowed to operate a hyena. Lots and lots of tests, criteria, and note scratching. They should probably have to wear some kind of coconut helmet, by law. And polished amber sunglasses: Crec-Bans.
+- The lizard-bird (always?) hunts at night because it his infra-red /pits/, like you-know-who.
+
+* Ephemeral Notes
+
+- Some places to keep up with:
+  - J'anz-Caves: Where Thag was walking FROM
+  - Hummingbird Pass the road Thag was traveling along, kind of a Balrag border-road.
+  - Prominence-Caves: Where Thag was walking TO (he lives/lived there?). [Is it on Water?? Do we have a sea down there??
+
