--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -142,15 +142,23 @@ His feedback from the toddler was a shrug. Grav made a "big eat-y beak" gesture 
 
 The toddler's eyes made saucers. He pointed at Grav and jumped rapidly with bent knees, his torso more or less stationary, as one would at the height of a Pictionary nail-biter.
 
-Lizard-bird could and would kill men. There was no scooping up in the peak and swallowing whole. No, that would be better.
+Lizard-bird could and would kill men. There was no scooping up in the beak and swallowing whole. No, that would be a better fate. Someone from their and others' childhood shared-experience had was very impactful in their respect for lizard-bird.
 
 ** Caveman Thag
 
-A rare survivor once enthusiastically gave his tale, to the best he could, without embellishment, just for the good of the Forest. He had a kind of speaking tour. /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were to catch phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
+A rare survivor from generations ago to the present day xxx fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was unable to speak in a comprehensible manor, even if slowly and in-person. He could make a word here and there and of course there was a growing vocabulary of signs.], enthusiastically gave his tale, to the best he could, without embellishment, but with plenty of help, just for the good of the Forest.
+
+He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
+
+Thag could not himself speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he knew too few.
+
+A man gifted by a loud, engaging voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned. Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologe. He was on-cue always.
 
 He would tour any demographic that would benefit, which would most of all be children. They would gather around him as he stood center stage, or whatever served in its place.
 
 He would scare kids straight about lizard-bird awareness.
+
+The voice of Thag began:
 
 #+begin_somethen
 Kids, as you know, my name is Thagalonious Son of Reginald, but you kids know me as Caveman Thag!
@@ -166,19 +174,20 @@ Many of you know some of my story, but I'm going to lay it out right here, like 
 
 The kids shout again, and Thag points to the ground with his only arm on which there are really only two /sorts/ of fingers.
 
+More or less appropriate, but sometimes vague gestures came from Thag in time with certain parts of the story.
+
 #+begin_quote
 I say 'Stay Low to Scrub', and /you/ say...
 #+end_quote
 
 "**Stay! Low! to! Mud!**"
 
-Thag smiled.
+Thag smiled with satisfaction which, with his lower lip missing, was quite a smile indeed.
 
-xxx xxx walk? doesn't everybody run? maybe there is the message of
-xxx xxx "run, don't walk!" Lots of self-shaming for having been walking
+Thag's thunderous borrowed voice continued as Thag made a kind of one-armed shrug.
 
 #+begin_quote
-/Well/... I was walk home from xxx along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was at Hummingbird Pass, which connects xxx and xxx, down at the far south of our Forest.
+/Well/... I was walk home from J'anz-Caves along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was at Hummingbird Pass, which connects J'anz-Caves and Prominence-Caves, where my parents and I lived at the time, down at the far south of our Forest.
 
 We have Balrag for neighbors, so we know a lot about getting along and also about surviving. They're good cavepeople.
 #+end_quote
@@ -186,23 +195,27 @@ We have Balrag for neighbors, so we know a lot about getting along and also abou
 The children did not yet know that they should sneer at this.
 
 #+begin_quote
-I was minding my own business. I was on my third night, about half way through, as I had to go all the way from xxx to xxx to xxxtaskxxx.
+I was minding my own business. I was on my third night, about half way through, as I had to go all that way to make it home after The Season of Industry[fn:: The audience understood two things from this: 1. Thag was working in J'anz-Caves during the foraging off-season for his family's value needs, and 2. It was winter time, as this is the season's name.].
 
-It was not especially bright, as there was only a sliver of moon. The stars where bright where they shone, but there were as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last momement...
+It was not especially bright out that night, as there was only a sliver of moon. The stars where bright where they shone, but there were as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last moment...
 #+end_quote
 
-The children said little but some seemed to be crawling backward using their arms as they sat on the floor.
+The children said little but some seemed to be crawling backward using their arms as they sat on the floor. Some able to hover their folded legs like an accomplished yogi.
 
 #+begin_quote
-I knew that a lizard-bird included this bit of path in its territory. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings. In the case of us silly Crec that make nice, straight paths, a bird might choose to fly along a nice, straight course scanning for snacks. You my little ones, are snacked sized.
+I knew that a lizard-bird included this bit of path in its territory. Stories had been going around both caves[fn:: Here the word is used to refer to the two villages, his origin and destination.]. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings.
+
+In the case of us silly Crec that make nice, straight paths, a bird might choose to fly along a nice, straight course scanning for snacks for palm at a time, without having to change course.
+
+You my little ones, are snacked sized.
 #+end_quote
 
-A quite-one stepped all over the nighbors beihind her, faces, groins, wherever, in order to escape. Her brother, having been priming her with fear for days and knowing how to trigger her manic flight, just exactly.
+A quite-one stepped all over the nighbors beihind her; faces, groins, wherever, in order to escape, her brother, having been priming her with fear for days and knowing how to trigger her manic flight, just exactly.
 
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
 #+begin_quote
-It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, I was quite at ease, and walking in the middle of the path. I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something no one could even present a theory for. But clear day or not, someone would eventually witness the bleating goat get in a drop-stone by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there.] I was quite at ease, and walking in the middle of the path. I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
 #+end_quote
 
 Thag made a practiced, convincing lizard-bird screech[fn:: One absolutely never used by the bird itself while on the hunt, when it was as silent as a massive owl might be.].
@@ -269,7 +282,7 @@ The parts you see missing here are the parts she took.
 
 Thag took some time in reloushing another of his popular theatrics. He raised his one arm and blindly hopped in a circle, one of his thighs being about half as big around as the other. One ham mostly missing, and a dripping mess of leisurely, gravity-fed feces downward from where his anus used to be.
 
-He completed his circle and made a smile, with the lower lip missing, which is a big smile indeed.
+He completed his circle and made another famous Caveman Thag smile.
 
 Some children giggled. Thag made an oddly raptor-like grabbing motion in the sound's direction as a friendly wave to a perfectly natural reaction from a child.
 
@@ -324,5 +337,8 @@ xxx xxx xxx
 
 
 xxx Someone with a clever name scares kids straight about lizard bird awareness xxx
+
+xxx xxx walk? doesn't everybody run? maybe there is the message of
+xxx xxx "run, don't walk!" Lots of self-shaming for having been walking
 
 xxx 4 later: with hastily, poorly-appointed row after row of little hills, with a kind of crash pad of a cave.
