--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -146,7 +146,7 @@ Lizard-bird could and would kill men. There was no scooping up in the beak and s
 
 ** Caveman Thag
 
-A rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was unable to speak in a comprehensible manor, even if slowly and in-person. He could make a word here and there and of course there was a growing vocabulary of signs.] enthusiastically gave his tale, to the best he could, without embellishment, but with plenty of help, just for the good of the Forest.
+One rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was unable to speak in a comprehensible manor, even if slowly and in-person. He could make a word here and there and of course there was a growing vocabulary of signs.] enthusiastically gave his tale, to the best he could, without embellishment, but with plenty of help, just for the good of the Forest.
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
