--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -150,9 +150,9 @@ One rare survivor, beginning generations ago and up to the present day[fn:: Thag
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
-Thag could not himself speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he knew too few.
+Thag himself could only just barely speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he knew too few.
 
-A man gifted by a loud, engaging voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned. Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologe. He was on-cue always.
+A man gifted by a loud, engaging voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned. Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was on-cue always.
 
 He would tour any demographic that would benefit, which would most of all be children. They would gather around him as he stood center stage, or whatever served in its place.
 
