--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -146,13 +146,15 @@ Lizard-bird could and would kill men. There was no scooping up in the beak and s
 
 ** Caveman Thag
 
-One rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was unable to speak in a comprehensible manor, even if slowly and in-person. He could make a word here and there and of course there was a growing vocabulary of signs.] would enthusiastically, and quite regularly share his story just for the greater good of the Forest[fn:: But most especially for the cavechildren.].
+One rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was unable to speak in a comprehensible manor, even if slowly and in-person. He could make a word here and there and of course there was a growing vocabulary of signs. As such, Thag felt in a few cases that he was being glowingly surrounded by people who didn't always go to a lot of trouble to /fully/ understand what he was trying to say.] would enthusiastically, and quite regularly share his story just for the greater good of the Forest[fn:: But most especially for the cavechildren.].
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
-Thag himself could only just barely speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he knew too few.
+Thag could not speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he wished he had a few more.
 
-A man gifted by a loud, engaging voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned. Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was on-cue always.
+In his place a man gifted with a loud, engaging, homely voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned.
+
+Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was on-cue always.
 
 He would tour any demographic that would benefit, which would most of all be children. They would gather around him as he stood center stage, or whatever served in its place.
 
