--- a/Spoilers.org
+++ b/Spoilers.org
@@ -110,6 +110,9 @@ Note: Grav cleverly invents the concept of "lawyer", works hard to become one, f
 - Is there a character that's always trying to make a flying machine and fails over and over in hilarious ways. Is there?!
 - There needs to be a skill or activity that makes a caveperson really look like a badass. Like taming a hyena and riding on its back (which works out usually.) And a regulatory body that ensures that only the properly skilled are allowed to operate a hyena. Lots and lots of tests, criteria, and note scratching. They should probably have to wear some kind of coconut helmet, by law. And polished amber sunglasses: Crec-Bans.
 - The lizard-bird (always?) hunts at night because it his infra-red /pits/, like you-know-who.
+- Thag:
+  - Is kind of helpless and losing control of his posse.
+  - Because he needs to use so many click-clock words, he sometimes chooses "the closest thing", constrained by sounds he can't make. That plus homonyms and other zany linguistic hi-jinks, make for many a falling prat.
 
 * Ephemeral Notes
 
