--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -146,7 +146,7 @@ Lizard-bird could and would kill men. There was no scooping up in the beak and s
 
 ** Caveman Thag
 
-One rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was only just barely able to speak in a comprehensible manor, even if only slowly, close up and in person. He could make a word here and there. Crecspeak had an incredible number of words composed of only unvoiced consonants and clicks. Choosing his vocabulary allowed him to communicate further. Of course there was a growing vocabulary of signs, but it was all so frustratingly limited. As such, Thag felt in a few cases that he was being growingly surrounded by people who didn't always go to a lot of trouble to /fully/ understand what he was trying to say.] would enthusiastically, and quite regularly share his story just for the greater good of the Forest[fn:: But most especially for the cavechildren.].
+One rare survivor, beginning generations ago and up to the present day[fn:: Thag was 67 years old at the time. That was astonishingly old for a caveman. Thag was cared for at first only by a loving and tight-knit, but heartbroken family. As his fame grew, his circle of caretakers grew wider. Thag himself was only just barely able to speak in a comprehensible manor, even if only slowly, close up and in person. He could make a word here and there. Crecspeak had an incredible number of words composed of only unvoiced consonants and clicks. Choosing his words with skill allowed him to communicate further. Of course there was a growing vocabulary of signs, but it was all so frustratingly limited. As such, Thag felt in a few cases that he was being growingly surrounded by people who didn't always go to a lot of trouble to /fully/ understand what he was trying to say.] would enthusiastically, and quite regularly share his story just for the greater good of the Forest[fn:: But most especially for the cavechildren.].
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
