--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -150,7 +150,7 @@ One rare survivor, beginning generations ago and up to the present day[fn:: Thag
 
 He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder, shouted by his audience, /Stay Low to Mud/ were the two catchy phrases by which he was known. In other words: Hide, get out of the way [of the stalking lizard-bird]!
 
-Thag could not speak in a way that would be practical for audiences or scratchers-of-new-things. He could make himself understood to the empathetic and patient, of whom he wished he had a few more.
+Thag could not speak in a way that would be practical for audiences or scratchers-of-new-things[fn:: Journalists, of a sort.]. He could make himself understood to the empathetic and patient, of whom he wished he had a few more.
 
 In his place a man gifted with a loud, engaging, homely voice, who was made as invisible as possible and standing in the most inconspicuous place possible would make the theater thunder with confidence in lessons learned.
 
