--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -152,7 +152,7 @@ He had a kind of "speaking tour". /Stay Low to Scrub/ and its rejoinder, shouted
 
 Thag could not speak in a way that would be practical for audiences or scratchers-of-new-things[fn:: Journalists, of a sort.]. He could make himself understood to the empathetic and patient, of whom he wished he had a few more.
 
-In his place a man gifted with a loud, engaging, homely voice, who was made as invisible as possible and standing in the most inconspicuous place possible, would make the theater thunder with confidence in lessons learned.
+In his place a man gifted with a loud, engaging, homely voice, who was made as invisible as possible and standing in the most inconspicuous place possible, would make the theater thunder with the confidence of sound lessons learned.
 
 Thag made no effort to move his mouth. He just stood there and made himself heard as if by magic, effortlessly. He would perform very regular, practiced motions at certain points in the long monologue. He was on-cue always.
 
