--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -189,12 +189,12 @@ Thag smiled with satisfaction which, with his lower lip missing, was quite a smi
 Thag's thunderous borrowed voice continued as Thag made a kind of one-armed shrug.
 
 #+begin_quote
-/Well/... I was walk home from J'anz-Caves along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was at Hummingbird Pass, which connects J'anz-Caves and Prominence-Caves, where my parents and I lived at the time, down at the far south of our Forest.
+/Well/... I was walk home from J'anz-Caves along the path that many of you know well, it's not close to here, but it's close enough. Many of you have seen it in person. It was along The Great Hummingbird Trail, which connects J'anz-Caves, the starting point of my trek to Prominence-Caves, where my parents and I lived at the time. As you know, this is all way down at the far morning-sun-right-side of our Forest.
 
 We have Balrag for neighbors, so we know a lot about getting along and also about surviving. They're good cavepeople.
 #+end_quote
 
-The children did not yet know that they should sneer at this.
+The children did not yet know that they should sneer at this. Some adults snickered, admiring the spoken nod to small-knowledge.
 
 #+begin_quote
 I was minding my own business. I was on my third night, about half way through, as I had to go all that way to make it home after The Season of Industry[fn:: The audience understood two things from this: 1. Thag was working in J'anz-Caves during the foraging off-season for his family's value needs, and 2. It was winter time, as this is the season's name.].
