--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -194,7 +194,7 @@ Thag's thunderous borrowed voice continued as Thag made a kind of one-armed shru
 We have Balrag for neighbors, so we know a lot about getting along and also about surviving. They're good cavepeople.
 #+end_quote
 
-The children did not yet know that they should sneer at this. Some adults snickered, admiring the spoken nod to small-knowledge.
+The children did not yet know that they should sneer at this. Some adults snickered, approving the implied nod to small-knowledge.
 
 #+begin_quote
 I was minding my own business. I was on my third night, about half way through, as I had to go all that way to make it home after The Season of Industry[fn:: The audience understood two things from this: 1. Thag was working in J'anz-Caves during the foraging off-season for his family's value needs, and 2. It was winter time, as this is the season's name.].
