--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -202,7 +202,7 @@ I was minding my own business. I was on my third night, about half way through, 
 It was not especially bright out that night, as there was only a sliver of moon. The stars where bright where they shone, but there were as much cloudy sky as not, lots of burrows of sky for a big, mean bird to stay out of view; say, just until the last moment...
 #+end_quote
 
-The children said little but some seemed to be crawling backward using their arms as they sat on the floor. Some able to hover their folded legs like an accomplished yogi.
+The children said little but some seemed to be crawling backward using their arms as they sat on the floor; some able to hover their folded legs along like an accomplished yogi.
 
 #+begin_quote
 I knew that a lizard-bird included this bit of path in its territory. Stories had been going around both caves[fn:: Here the word is used to refer to the two villages, his origin and destination.]. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings.
