--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -207,12 +207,14 @@ The children said little but some seemed to be crawling backward using their arm
 #+begin_quote
 I knew that a lizard-bird included this bit of path in its territory. Stories had been going around both caves[fn:: Here the word is used to refer to the two villages, his origin and destination.]. And, remember this, in a woods thick enough to block the sky, a lizard-bird is always scanning the openings.
 
-In the case of us silly Crec that make nice, straight paths, a bird might choose to fly along a nice, straight course scanning for snacks for palm at a time, without having to change course.
+In the case of the Crec Forest Roads, that make use of so many straight paths, a bird can choose to fly along a straight course scanning, for snacks, for palm at a time, without having to change course. For a lizard-bird, this is a kind of rest. Know that your attacker will have been fully rested.
 
-You my little ones, are snacked sized.
+You my little ones, are just about snacked sized.
 #+end_quote
 
-A quite-one stepped all over the nighbors beihind her; faces, groins, wherever, in order to escape, her brother, having been priming her with fear for days and knowing how to trigger her manic flight, just exactly.
+Thag made swatting motions with his one arm. Involuntarily jiggling finger-stumps, while not adding any meaning, did add to the overall horror of the gesture.
+
+Calling it quits at this point, a quiet-one stepped all over the neighbors behind her; faces, groins, where ever her powerful little hard feet landed. Her brother, having been priming her with fear for days, knew just how to nudge her over the edge from sane calculation and obedience straight into mindless, desperate flight, in this case with a well-timed jab to the ribs.
 
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
