--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -220,9 +220,17 @@ Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
 #+begin_quote
 It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something no one could even present a theory for. But clear day or not, someone would eventually witness the bleating goat get in a drop-stone by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there.] I was quite at ease, and walking in the middle of the path. I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+
+Kids, I was counting on the clouds to protect me! We know that's wrong. What do we say about clouds and lizard-bird safety?
 #+end_quote
 
-Thag made a practiced, convincing lizard-bird screech[fn:: One absolutely never used by the bird itself while on the hunt, when it was as silent as a massive owl might be.].
+This time, the knowing audience chanted along with Thag as he waived out the syllabes.
+
+"**/Don't Let Clouds Fool Ya!/**"
+
+It was simple and memorable. That was the point. /Some of the adults in the audience had difficulty with some ideas of comparable complexity./ Thag thought.
+
+Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds. Thag had endless practice.].
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser, as the scat-er was immediately giggling and dancing soon enough. And children were hopeless in communicating the nuances of this, far from warning their friends in other parts. So this was always a genuine surprise and That loved it.
 
