--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -228,9 +228,9 @@ This time, the knowing audience chanted along with Thag as he waived out the syl
 
 "**/Don't Let Clouds Fool Ya!/**"
 
-It was simple and memorable. That was the point. /Some of the adults in the audience had difficulty with some ideas of comparable complexity./ Thag thought.
+It was simple and memorable. That was the point. /Some of the adults in the audience had difficulty with plenty of ideas of comparable complexity./ Thag thought.
 
-Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds. Thag had endless practice.].
+Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice.].
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser, as the scat-er was immediately giggling and dancing soon enough. And children were hopeless in communicating the nuances of this, far from warning their friends in other parts. So this was always a genuine surprise and That loved it.
 
