--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -232,7 +232,11 @@ It was simple and memorable. That was the point. /Some of the adults in the audi
 
 Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice.].
 
-As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser, as the scat-er was immediately giggling and dancing soon enough. And children were hopeless in communicating the nuances of this, far from warning their friends in other parts. So this was always a genuine surprise and That loved it.
+As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser. The scat-er was immediately giggling and dancing soon enough. As the performance went on, feces became ever less a concern for enraptured Caveman Thag audiences.
+
+And children were hopeless in communicating something like what they had just experienced. They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasion a maybe lesson learned. Children frequently got a wave of buzz ahead of Thag's visits.
+
+But no one was ever prepared for the first screech. This was always a genuine surprise and Thag loved it.
 
 #+begin_quote
 But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
