--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -234,7 +234,9 @@ Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely nev
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser. The scat-er was immediately giggling and dancing soon enough. As the performance went on, feces became ever less a concern for enraptured Caveman Thag audiences.
 
-And children were hopeless in communicating something like what they had just experienced. They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasion a maybe lesson learned. Children frequently got a wave of buzz ahead of Thag's visits.
+And children were hopeless in communicating something like what they had just experienced.
+
+They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasion a maybe lesson learned. Children frequently got a wave of buzz ahead of Thag's visits.
 
 But no one was ever prepared for the first screech. This was always a genuine surprise and Thag loved it.
 
