--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -236,9 +236,9 @@ As was always the case with large, temperamental crowds of human children, some 
 
 And children were hopeless in communicating something like what they had just experienced.
 
-They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasion a maybe lesson learned. Children frequently got a wave of buzz ahead of Thag's visits.
+They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasions they might share an important lesson learned.
 
-But no one was ever prepared for the first screech. This was always a genuine surprise and Thag loved it.
+Children frequently got a wave of buzz ahead of Thag's visits. But no one was ever prepared for the first screech. This was always a genuine surprise and Thag loved it.
 
 #+begin_quote
 But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
