--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -230,7 +230,7 @@ This time, the knowing audience chanted along with Thag as he waived out the syl
 
 It was simple and memorable. That was the point. /Some of the adults in the audience had difficulty with plenty of ideas of comparable complexity./ Thag thought.
 
-Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice.].
+Thag made a practiced, convincing lizard-bird screech[fn:: A call absolutely never used by the bird itself while on the hunt, where it was as silent as a massive owl might be. The sound was however /exactly/ like one of the well-known lizard-bird sounds and equally loud. Thag had endless practice at /performing/ the screech. The sound could not be credited to him, but Thag knew there was a sort of "symphony" taking place; plenty of talented cavepeople involved at all levels. And in any case, even perceptive adults just a all-finger rows back were unsure where the voice came from.].
 
 As was always the case with large, temperamental crowds of human children, some added to the known scat-zones, crawling away unembarrassed. The loud, stunning screech was a crowd-pleaser. The scat-er was immediately giggling and dancing soon enough. As the performance went on, feces became ever less a concern for enraptured Caveman Thag audiences.
 
@@ -238,7 +238,9 @@ And children were hopeless in communicating something like what they had just ex
 
 They could excitedly talk to their friends in other parts, relaying the excitement, pandemonium, the once-in-life experiences like seeing a living man so deformed as Thag, and on rare occasions they might share an important lesson learned.
 
-Children frequently got a wave of buzz ahead of Thag's visits. But no one was ever prepared for the first screech. This was always a genuine surprise and Thag loved it.
+Children frequently got a wave of buzz ahead of Thag's visits. But no one was ever prepared for the first screech.
+
+This was always a genuine surprise and Thag loved it. That worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in this regard. He had both the booming voice of authority and the screech of crazed terror.
 
 #+begin_quote
 But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
