--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -240,7 +240,7 @@ They could excitedly talk to their friends in other parts, relaying the exciteme
 
 Children frequently got a wave of buzz ahead of Thag's visits. But no one was ever prepared for the first screech.
 
-This was always a genuine surprise and Thag loved it. That worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in this regard. He had both the booming voice of authority and the screech of crazed terror.
+This was always a genuine surprise and Thag loved it. Thag worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in this regard. He had both the booming voice of authority and the screech of crazed terror.
 
 #+begin_quote
 But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
