--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -219,12 +219,12 @@ Calling it quits at this point, a quiet-one stepped all over the neighbors behin
 Most boys laughed. Otherwise there was not much of a ruckus this scare around.
 
 #+begin_quote
-It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something no one could even present a theory for. But clear day or not, someone would eventually witness the bleating goat get in a drop-stone by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there.] I was quite at ease, and walking in the middle of the path. I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+It was known then, and it is known still that these are the most hazardous. As cloud cover can give you a false set of ease, which we now know is completely unjustified![fn:: Having experimented extensively, employing tethered goats and lots of boulder-constructed "hides", the Crec were now entirely sure that the lizard-bird was bothered very little by clouds. How they would be able to "see through" clouds was something no one could even present a theory for. But clear day or not, someone would eventually witness the bleating goat get in a drop-stone by a bomb dropping out of the sky, which was especially dramatic on overcast days when it was entirely unknown whether there was even a bird up there.] I was quite at ease, and walking in the middle of the path.
 
 Kids, I was counting on the clouds to protect me! We know that's wrong. What do we say about clouds and lizard-bird safety?
 #+end_quote
 
-This time, the knowing audience chanted along with Thag as he waived out the syllabes.
+This time, the knowing audience chanted along with Thag as he waived out the syllables.
 
 "**/Don't Let Clouds Fool Ya!/**"
 
@@ -243,17 +243,29 @@ Children frequently got a wave of buzz ahead of Thag's visits. But no one was ev
 This was always a genuine surprise and Thag loved it. Thag worried about everyone's loyalty and intentions, but Voice-Maker Jurd was a value-stone in the value he brought, Thag had to admit. He had both the booming voice of authority and the screech of crazed terror.
 
 #+begin_quote
-But I was not usually so careful, so then it came, eventually. I am unable to puzzle together anything, as I was walking in my own little world, at night in the woods; an older all-finger-and boy who could kick some ham, but was no match to a lizard-bird.
+I would only very rarely think about danger, walk to the side under the canopy, or turn my head in case I'm both very unlucky and lucky.
+
+But I was not usually even this careful.
 #+end_quote
 
-Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: carefully sometimes disastrously. You got a lot more champagne than you anticipated.
+Jurd knew to watch Thag carefully at this point, using his master's subtle cues to decide when to resume, beginning the real drama in Thag's story.
 
-Thag was quite afraid of lizard-bird still.
+He began again in what stood for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away.
+
+#+begin_quote
+Then it came, eventually.
+
+I am unable to puzzle together any of what took place behind me of course, as I was walking in my own little world at night in the woods, lost in thought; an older all-finger-and boy who could kick some ham on the monkey-ground[fn:: Playground. More any place where play takes place.], but was no match to a lizard-bird.
+#+end_quote
+
+Thag always had legitimate lament he could tap into at any time to bring the mood of the house back down to "somber". It was actually something that could be "tapped" in kind of the same way a keg of champagne can be: carefully sometimes, often disastrously. You got a lot more champagne than you anticipated. At this, he was practiced.
+
+But it was true that Thag was afraid of lizard-bird still, in a way that makes your arachnophobia seem well-considered and rational.
 
 This time too, Thag had to snap out of it and continue his outreach. In the most productive way possible.
 
 #+begin_quote
-I was tackled from behind by what felt like being stabbed from behind by seven or eight blut but sharp obsidian blades and a massive speeding boulder of warmth, muiscles, and sparse, downy feathers.
+I was tackled from behind in a way that felt like being stabbed from behind by seven or eight blunt but sharp obsidian blades somehow wielded by a massive speeding boulder of warmth, muscle, and sparse, downy feathers; only the beginning of its horror.
 
 He rode me like a hill-sled for probably four man. Talons squeezing as we slid. By the time we stopped. I felt like I had been wrapped in obsidian-vine[fn:: A vine that grows throughout the Crec realm. If carefully removed and uncoiled (which was obviously a dangerous art) from its host trees, which may be many, and then lightly fire-hardened. It could become a kind of barbed wire. But with pinkie-thumb sized, needle-pointed barbs.], with someone wrapping it ever-tighter. You don't know what it feels like to be mercilessly /squeezed/ by something so terrible...
 #+end_quote
