--- a/fragments/their_last_club-drill.org
+++ b/fragments/their_last_club-drill.org
@@ -250,7 +250,7 @@ But I was not usually even this careful.
 
 Jurd knew to watch Thag carefully at this point, using his master's subtle cues to decide when to resume, beginning the real drama in Thag's story.
 
-He began again in what stood for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away.
+He began again in what stood in for a "quiet" voice in the enormous hillside theater. Jurd was skilled at the seemingly impossible; whispering such that it could be heard one half of one palm away.
 
 #+begin_quote
 Then it came, eventually.
